[SYNCOPE-319][SYNCOPE-209] Introducing new REST operation ConnectorService#reload() and refactoring the ConnId layer
git-svn-id: https://svn.apache.org/repos/asf/syncope/trunk@1448090 13f79535-47bb-0310-9956-ffa450edef68